# SoftwareAssignmentFinal

./: .env.example  DATA_SOURCES.md  Makefile.mak  OVERVIEW.txt  README.md  bot.py  function.c  function.h  main.c  prime.c  pyproject.toml  requirements.txt  wt_scrape.py
